# JCU_auto_network

./: .env.example  .gitignore  CLI_README.md  README.md  README_AUTOSTART.md  app.py  app_cli.py  com.campus.network.auth.plist  install.sh  pyproject.toml  requirements.txt  uninstall.sh
install/mac/: README.md  com.jcu.auto-network.plist  install.sh  uninstall.sh
install/windows/: README.md  build_exe.bat  install.bat  uninstall.bat
src/: campus_login.py  network_test.py  utils.py
